--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <p>Naxorgi osh</p>
           </div>
           <div class="timeline-box">
-            <p class="title">Ayollar uchun</p>
-            <p><strong>17:00</strong> da ayollar bazmi</p>
+            <p class="title">Kechki Bazm</p>
+            <p>soat <strong>17:00</strong></p>
           </div>
         </div>
         <p class="note">Eng muhim lahzalarni o‘tkazib yubormaslik uchun iltimos, o‘z vaqtida keling.</p>
