--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="paper" id="paper">
     <div id="content-uz" class="content">
       <img src="./assets/image.png" alt="Flowers" class="flower-decoration">
-      <h1>Abbos va Ezozxon</h1>
+      <h1>Abbosxon va Ezozxon</h1>
       <div class="section">
         <h2>To‘y taklifnomasi</h2>
         <p>Hurmatli do‘stlar va yaqinlar!</p>
