--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <h2>Marosim dasturi</h2>
         <div class="timeline-boxes">
           <div class="timeline-box">
-            <p class="title">Erkaklar uchun</p>
-            <p>Naxorgi osh</p>
+            <p class="title">Naxorgi osh <span style="font-size: 5 px">(Erkaklar uchun)</span></p>
+            <p>soat 06:00</p>
           </div>
           <div class="timeline-box">
             <p class="title">Kechki Bazm</p>
