--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="timeline-boxes">
           <div class="timeline-box">
             <p class="title">Naxorgi Osh</p>
-            <p>soat 06:00</p>
+            <p>soat<strong>06:00</strong></p>
           </div>
           <div class="timeline-box">
             <p class="title">Kechki Bazm</p>
