--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="./assets/favicon.svg">
-
+  <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg">
 </head>
 <body>
   <div class="paper" id="paper">
@@ -32,6 +31,16 @@
         </div>
       </div>
 
+      <div class="section countdown">
+        <h2>To‘y boshlanishigacha qolgan vaqt</h2>
+        <div class="countdown-container">
+          <div id="days" class="time-box">00 <span>kun</span></div>
+          <div id="hours" class="time-box">00 <span>soat</span></div>
+          <div id="minutes" class="time-box">00 <span>daq</span></div>
+          <div id="seconds" class="time-box">00 <span>soniya</span></div>
+        </div>
+      </div>
+
       <div class="section timeline">
         <h2>Marosim dasturi</h2>
         <div class="timeline-boxes">
@@ -49,11 +58,9 @@
 
       <div class="section map">
         <h2>Manzil va yetib borish</h2>
-        <iframe src="https://yandex.uz/map-widget/v1/?ll=71.753137%2C40.402264&z=19&mode=whatshere&whatshere%5Bpoint%5D=71.753081%2C40.402253&whatshere%5Bzoom%5D=19" 
-  width="100%" height="300" frameborder="0" allowfullscreen style="border-radius:10px;"></iframe>
-
-        <a href="https://yandex.uz/maps/10336/fergana/?ll=71.752926%2C40.401857&mode=routes&rtext=~40.402253%2C71.753081&rtt=auto&ruri=~&z=17.83" target="_blank">
-          <button>Yo'l ko'rsatish</button>
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A76bc94447abda09fff95910f8609a4a40fab751ddc9a26cc05de99d67a83860e&amp;source=constructor" width="100%" height="300" frameborder="0" style="border-radius:10px;"></iframe>
+        <a href="https://yandex.uz/maps/?rtext=~40.402253,71.753081" target="_blank">
+          <button>Yo‘l ko‘rsatish (Yandex)</button>
         </a>
       </div>
 
@@ -73,25 +80,42 @@
   </div>
 
   <audio autoplay loop>
-    <source src="03.mp3">
+    <source src="03.mp3" />
   </audio>
 
   <script>
+    const weddingDate = new Date('July 5, 2025 06:00:00').getTime();
+    function updateCountdown() {
+      const now = new Date().getTime();
+      const distance = weddingDate - now;
+      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      document.getElementById('days').innerHTML = days + " <span>kun</span>";
+      document.getElementById('hours').innerHTML = hours + " <span>soat</span>";
+      document.getElementById('minutes').innerHTML = minutes + " <span>daq</span>";
+      document.getElementById('seconds').innerHTML = seconds + " <span>soniya</span>";
+
+      if (distance < 0) {
+        clearInterval(interval);
+        document.querySelector('.countdown-container').innerHTML = "To‘y boshlandi!";
+      }
+    }
+    const interval = setInterval(updateCountdown, 1000);
+
     function sendRSVP() {
       const name = document.getElementById('name-uz').value.trim();
       const message = document.getElementById('message-uz').value.trim();
-
       if (!name) {
         alert('Ismingizni kiriting.');
         return;
       }
 
-      const text = `💌 Yangi tabrik:
-👤 Ism: ${name}
-💬 Xabar: ${message || '-'}`;
+      const text = `💌 Yangi tabrik:\n👤 Ism: ${name}\n💬 Xabar: ${message || '-'}`;
       const token = '8013558116:AAFup6bCVcm8lZRX3OiAKOutINO_XnVnWWg';
       const chatIds = ['446415034', '958656678'];
-
       chatIds.forEach(chatId => {
         const url = `https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(text)}`;
         fetch(url).then(r => r.json()).then(data => {
